--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -133,7 +133,7 @@
     </div><br>
     <p>Lets get in touch. Send me a message:</p>
 
-   <form action="mailto:someone@example.com" method="post" enctype="text/plain">
+   <form action="mailto:lucasalvarado23@gmail.com" method="post" enctype="text/plain">
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
